spacing fixes for table

--- a/client/src/components/helpers/_variables.scss
+++ b/client/src/components/helpers/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #1D5057;
 $light-grey: #F7F7F7;
 $dark-grey: #EAEAEA;
 $main-content-color: white;
+$text-grey: #797979;
 
 $primary-btn-color: #0B3338;
 $accent-color: #51C4C6;
